$Id$

1.4.5 TBD

* automatically determine groups from the Nagios servicegroup definitions.
* fixed heartbeats/stepsizes/resolutions bug.  this time for real.  really.
* retain a copy of any modifications made to nagios.cfg and commands.cfg when
   removing rpm or deb packages.
* fixed install.pl to work with icinga.
* renamed upgrade.pl to flat2hier.pl
* fixed install option typo for --check-prerequisites in install instructions.
* encourage standalone installations rather than overlays unless installing
   from rpm or deb package.
* encourage nagios pre-flight checks before restarting nagios.

1.4.4 2011-01-15

* this release includes many changes to the default map configuration and the
   default colors and labels.  this was designed to make new installations
   easier right out of the box.  the bug fixes and feature additions are
   backward compatible, so configuration files from existing installations
   will still work.  see the upgrade section of the README file for details.
* overhaul of install.pl.  added option to check for prerequisites (poorly
   configured rrdtool and gd have been major source of installation woes).
   added options for different layouts (overlay or separate) and locations.
   the install script now respects the DESTDIR conventions for packaging.
* improved handling of host,service,database,datasource specifications in the
   graphing parameters (plotasX, stack, lineformat) and the data collection
   parameters (minimums, maximums, lasts).  individual data sources can now
   be distinguished, and pattern matching is supported throughout.
* added make targets for creating rpm and deb packages.
* added default rule to the map file that will catch any plugin with
   standards-compliant perfdata output.  removed old/redundant rules from the
   map file, bringing everything up to date with the latest nagios plugin
   output.  the new map file is much smaller, since a single rule recognizes
   more plugins.