@@ -190,6 +190,15 @@ stack = system,data;user,data;nice,data
 #lineformat = nice,data=AREA,AAAAFF,STACK;idle,data=AREA,AAFFAA,STACK
 lineformat = warn=LINE1,D0D050;crit=LINE1,D05050
 
+# Services that should receive 'fixed-scale' treatment.  Specifying fixed scale
+# does two things: it prevents rrdtool from translating the vertical axis units
+# from raw values to milli, kilo, etc. (the '-X 0' rrd option), and it does the
+# same for the values displayed in the legend for max, ave, and last.
+#
+# This is a list of qualified data source names separated by semicolons.
+# A single qualified data source must end with a semicolon.
+#fixedscale = .*,PING,loss,.*;
+
 # Graphs to show in host-service page (day, week, month, quarter, year)
 timeall = day,week,month,year
 # Graphs to show in host page
